BJS2-10730: Stream API 2